# immo

./: analysis.ipynb  faiss.ipynb  immo.index  immo.ipynb  immo.js  pyproject.toml
